2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs:
	* Modes.cs:
	* Enums.cs: Updated EVPD Page 83h to SPC-5.

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs: Added SCSI EVPD page 83h.

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs: Implemented SCSI EVPD 82h

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* Modes.cs: Added support for SCSI MODE PAGEs 11h, 12h, 13h
	and 14h (medium partitions)

2016-10-10  Natalia Portillo  <claunia@claunia.com>

	* Modes.cs: Added DDS-2.
	Corrected casting of density enumeration.

	* Types.cs: Added DDS-2

2016-10-08  Natalia Portillo  <claunia@claunia.com>

	* Sector.cs:
	* DiscImageChef.Decoders.csproj: Added CD sector descrambling.

2016-10-07  Natalia Portillo  <claunia@claunia.com>

	* Apple2.cs: Adds support for marshaling a whole disk, tracks
	and sectors as well as decoding sectors in 5and3 and 6and2
	GCRs.

	* AppleSony.cs: Adds support for marshaling a whole disk,
	tracks and sectors as well as decoding GCR sectors.

2016-08-22  Natalia Portillo  <claunia@claunia.com>

	* LisaTag.cs: Removed temporal variable.

2016-08-21  Natalia Portillo  <claunia@claunia.com>

	* LisaTag.cs:
	* DiscImageChef.Decoders.csproj: Separate Lisa tag decoding
	from Lisa filesystem and added Priam tags.

2016-08-18  Natalia Portillo  <claunia@claunia.com>

	* ATIP.cs: Make ATIP manufacturer resolver a public method.

	* Features.cs: Added HDBurn profiles.

	* Modes.cs: Corrected typo.

2016-08-09  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Decoders.csproj: Bumped version to 3.2.99.2.

2016-08-07  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Decoders.csproj: Public beta release 3.2.99.1.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.Decoders.csproj: Bumped to version 3.2.1.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.Decoders.csproj: Bump to version 3.2.0
